# tensorboard_logger

./: .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  MODULE.bazel  Makefile  README.md
include/: tensorboard_logger.h
proto/: plugin_data.proto  plugin_pr_curve.proto  summary.proto  tensor.proto
src/: tensorboard_logger.cc
tests/: test_tensorboard_logger.cc
