"""Module definition for tensorboard_logger."""

module(
    name = "tensorboard_logger",
    version = "0.1.0",
)

bazel_dep(name = "protobuf", version = "31.1")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    patches = [
        ":third_party/hedron_compile_commands.patch",
    ],
)
